# tool_flatten-oa-cpp

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
src/: CMakeLists.txt  main.cpp
